# sensa

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
examples/: finetune_minivit_imagenet.py  finetune_minivit_imagenet.yaml  linear_minivit_imagenet.py  linear_minivit_imagenet.yaml  mae_minivit_imagenet.py  mae_minivit_imagenet.yaml
src/sensa/: __init__.py  base.py
src/sensa/assets/: __init__.py
src/sensa/data/: __init__.py  augment.py  base.py  dino.py  imagenet.py  mae.py  read_images.py
src/sensa/layers/: __init__.py  attention.py  base.py  dyt.py  encoder.py  head_with_target_mining.py  last_pool.py  mask_utils.py  positional_encoding.py  positional_token.py  positional_tokens.py  regularized_residual.py  regularizer.py  rmsnorm.py  utils.py
src/sensa/loss/: __init__.py  base.py  cosface.py  cross_entropy.py  dino_loss.py  mse_loss.py  registry.py  sphereface2.py
src/sensa/models/: __init__.py  base.py  convnext.py  dino_head.py  mae_decoder.py  registry.py  vit.py
src/sensa/params/: __init__.py  base.py  data.py  layer.py  loss.py  model.py  optim.py  trainer.py
src/sensa/ssl/: __init__.py  mae.py
src/sensa/supervised/: __init__.py  classifier.py
src/sensa/trainer/: __init__.py  base.py  param_grouping.py  scheduler.py
src/sensa/trainer/ssl/: __init__.py  dino.py  mae.py
src/sensa/trainer/supervised/: __init__.py  classifier.py
src/sensa/utils/: __init__.py  load.py  obscure_state.py
tests/: test_data_augment.py  test_layers.py  test_loss.py  test_models.py  test_trainer.py  test_utils.py  utils.py
tests/samples/: mae_vit.yaml
